plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
}

group = 'com.github.horaruiz553.sifen'
version = '0.2.4-fork'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
    withJavadocJar()
    withSourcesJar()
}

repositories {
    mavenCentral()
}

dependencies {
    // Dependencias SOAP
    implementation 'javax.xml.soap:javax.xml.soap-api:1.4.0'
    implementation 'com.sun.xml.messaging.saaj:saaj-impl:1.5.2'

    // Para APIs de seguridad
    implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'

    // Otras dependencias
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
    implementation 'org.apache.httpcomponents:httpmime:4.5.13'
    implementation 'commons-codec:commons-codec:1.15'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.hamcrest:hamcrest:2.2'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    if (JavaVersion.current().isJava9Compatible()) {
        options.compilerArgs += [
            '--add-exports=java.base/sun.security.x509=ALL-UNNAMED',
            '--add-exports=java.base/sun.security.util=ALL-UNNAMED'
        ]
    }
}


javadoc {
    options.encoding = 'UTF-8'
    options.charSet = 'UTF-8'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifactId = 'rshk-jsifenlib-fork'

            pom {
                name = 'RSHK jsifenlib (Fork)'
                description = 'Fork personalizado de la librería SIFEN'
                url = 'https://github.com/Horaruiz553/rshk-jsifenlib'
                licenses {
                    license {
                        name = 'MIT License'
                        url = 'https://github.com/Horaruiz553/rshk-jsifenlib/blob/main/LICENSE'
                    }
                }
                developers {
                    developer {
                        id = 'horaruiz553'
                        name = 'Horacio Ruiz'
                        email = 'tu-email@ejemplo.com'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/Horaruiz553/rshk-jsifenlib.git'
                    developerConnection = 'scm:git:ssh://github.com/Horaruiz553/rshk-jsifenlib.git'
                    url = 'https://github.com/Horaruiz553/rshk-jsifenlib'
                }
            }
        }
    }

    repositories {
        maven {
            name = 'GitHubPackages'
            url = uri('https://maven.pkg.github.com/Horaruiz553/rshk-jsifenlib')
            credentials {
                username = project.findProperty('gpr.user') ?: System.getenv('GITHUB_USER')
                password = project.findProperty('gpr.key') ?: System.getenv('GITHUB_TOKEN')
            }
        }
        mavenLocal()
    }
}

signing {
    // Solo firmar en releases y si se llama a publish
    required { !version.endsWith('SNAPSHOT') && gradle.taskGraph.hasTask('publish') }
    useInMemoryPgpKeys(System.getenv('GPG_KEY'), System.getenv('GPG_PASSWORD'))
    sign publishing.publications.mavenJava
}
